# finsightutils_owl

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTINUOUS_LEARNING.md  CONTRIBUTING.md  Dockerfile  GITHUB_SYNC.md  GOOGLE_RESEARCH_INTEGRATION.md  MULTI_GPU_SUPPORT.md  Makefile  NAMING_CONVENTIONS.md  NVIDIA_INTEGRATIONS.md  NVIDIA_LAUNCHPAD.md  PROJECT_STRUCTURE.md  README.md  REFACTORING_PLAN.md  USER_GUIDE.md  brev.yaml  deploy.sh  docker-compose.yaml  docker-compose.yml  pyproject.toml
app/: tools_setup.py
app/templates/: unified_index.html
config/docker/: README.md  docker-compose.base.yml  docker-compose.blue-green.yml  docker-compose.dev.yml  docker-compose.multi-gpu.yml  docker-compose.standard.yml  docker-compose.t4-optimized.yml  docker-compose.t4-standalone.yml  docker-compose.t4-tensor.yml
config/nginx/: blue-green.conf  nginx.conf
config/prometheus/: blue-green.yml  dev.yml  prometheus-multigpu.yml  prometheus-nvidia.yml  prometheus-sap.yml  prometheus.yml
config/scripts/: cleanup-environment.sh  deploy-blue-green.sh  deploy.sh  entrypoint.sh  switch-deployment.sh  t4_optimize.sh  t4_tensor_core_entrypoint.sh  t4_tensor_core_optimizer.py
deplot/: README.md  config.json  integration_example.py
deployment/: cleanup-environment.sh  deploy-blue-green.sh  deploy_multi_gpu.sh  deploy_multi_gpu_with_learning.sh  deploy_nvidia_ecosystem.sh  deploy_sap.sh  deploy_t4_optimized.sh  deploy_t4_tensor_optimized.sh  docker-compose.blue-green.yml  docker-compose.nvidia.yml  docker-compose.sap.yml  docker-compose.t4-optimized.yml  docker-compose.t4-tensor-optimized.yml  docker-compose.yml  prometheus.yml  switch-deployment.sh
deployment/nginx/: nginx.conf
docs/: BLUEPRINT.md  IMPLEMENTATION_SUMMARY.md  SETUP.md
docs/authentication/: API_KEY_AUTH_GUIDE.md  API_KEY_AUTH_SOLUTION.md  AUTHENTICATION_GUIDE.md  AUTH_FIX_SUMMARY.md  COMPREHENSIVE_AUTH_FIX.md  FIXED_AUTH_SUMMARY.md  SECURE_API_KEYS.md
docs/deployment/: BLUE_GREEN_DEPLOYMENT.md  CONSOLIDATION_COMPLETE.md  CONSOLIDATION_SUMMARY.md  DEPLOYMENT_BLUEPRINT.md  NVIDIA_BACKEND_README.md  SAP_DEPLOYMENT.md  T4_GPU_OPTIMIZATION.md  VERCEL_FRONTEND_README.md
docs/images/: blue-green-architecture.txt
docs/sap_integration/: SAP_HANA_ERROR_HANDLING.md  SAP_HANA_GRAPHQL_API.md  (+3 more)
dvrl/: README.md  api.py  requirements.txt
html/: health  index.html
local-docker/: LATEST_API_TEST_RESULTS.md  docker-compose.yml  test_api_endpoints.sh
nam/: README.md  api.py  requirements.txt
nvidia-blueprint/: .env.template  Dockerfile.api  README.md  T4_OPTIMIZATION.md  UPDATE_NOTES.md  brev.yaml  docker-compose.yml  nginx.conf  verify-deployment.sh
optlist/: README.md  api.py  requirements.txt
scripts/: check_docstrings.py  check_missing_init.py  cleanup_for_production.sh  deploy.sh  deploy_real.sh  deploy_real_test.sh  deploy_t4_optimized.sh  deploy_test.sh  setup_nvidia_backend.sh  setup_test.sh  setup_vercel_frontend.sh  standardize_filenames.sh  standardize_names.sh
(+58 files in other folders)
