[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiq-owl"
version = "0.1.0"
description = "OWL Converter for SAP HANA schemas with GPU acceleration"
readme = "README.md"
authors = [
    {name = "FinSight Development Team", email = "dev@finsight.dev"}
]
license = {text = "Proprietary"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "rdflib>=6.3.2",
    "pymupdf>=1.22.5",
    "python-multipart>=0.0.6",
    "httpx>=0.24.1",
    "tritonclient[all]>=2.34.0",
    "opentelemetry-api>=1.19.0",
    "opentelemetry-sdk>=1.19.0",
    "opentelemetry-exporter-otlp>=1.19.0",
    "requests>=2.31.0",
    "aiohttp>=3.8.4",
    "owlready2>=0.40",
    "pandas>=2.0.0",
    "sqlalchemy>=2.0.0",
    "graphql-core>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "ruff>=0.0.272",
    "pre-commit>=3.3.2",
]
nvidia = [
    "cudf-cu12>=23.10.0",
    "cuml-cu12>=23.10.0",
    "cugraph-cu12>=23.10.0",
    "dask-cuda>=23.10.0",
    "nvidia-triton-model-analyzer>=1.24.0",
]
sap = [
    "hdbcli>=2.17.0",
    "pyhdb>=0.3.4",
]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "B", "I", "N", "C", "S", "BLE", "A", "COM", "C4", "DTZ", "T10", "EM", "ISC", "ICN", "G", "PIE", "T20", "PT", "Q", "RSE", "RET", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PGH", "PL", "TRY", "UP", "YTT", "RUF"]
ignore = ["E203", "E501", "S101"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 100

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.8
target-version = "py38"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**/*" = ["S101", "PLR2004"]